change cors configuration 4